reseni_ispiti_prakticni/jan1_2023/InteraktivniParser/parser.ypp
%{
    #include <iostream>
    #include <cstdlib>
    #include <string>
    #include <map>

    #include "Sifra.hpp"

    extern int yylex();

    void yyerror(const std::string& poruka) {
        std::cerr << poruka << std::endl;
        exit(EXIT_FAILURE);
    }

    std::map<std::string, Sifra> tablica_sifri;
    std::map<std::string, ListaSifri> tablica_listi;

    ListaSifri tekuca_lista;
    bool poslednja_je_lista = false;
%}

%union {
    double d_val;
    int i_val;
    std::string* s_val;
    Sifra* sifra_val;
    ListaSifri* lista_val;
    std::vector<Sifra>* niz_sifri_val;
}

%token SIFRA_T
%token <s_val> ID_T
%token <d_val> REAL_T
%token <i_val> INT_T
%token STAMPAJ_T
%token FST_T
%token SND_T
%token EQ_T
%token NEQ_T
%token LT_T
%token LE_T
%token GT_T
%token GE_T
%token LISTA_SIFRI_T
%token SUM_T

%type <sifra_val> izraz
%type <sifra_val> drugi_arg
%type <niz_sifri_val> lista_elemenata

%left EQ_T NEQ_T LT_T LE_T GT_T GE_T
%left '+' '-'
%left '*' '/'
%right UMINUS
%left '.' '['

%%

program: program naredba ';'
| naredba ';'
;

naredba: SIFRA_T ID_T   {
    tablica_sifri[*$2] = Sifra();
    delete $2;
}
| SIFRA_T ID_T '(' izraz ',' drugi_arg ')'  {
    if ($6 != nullptr) {
        tablica_sifri[*$2] = Sifra($4->fst(), $6->snd());
        delete $6;
    } else {
        tablica_sifri[*$2] = Sifra($4->fst());
    }
    delete $2;
    delete $4;
}
| SIFRA_T ID_T '=' izraz    {
    tablica_sifri[*$2] = *$4;
    delete $2;
    delete $4;
}
| STAMPAJ_T izraz   {
    if (poslednja_je_lista) {
        tekuca_lista.stampaj();
    } else {
        $2->stampaj();
    }
}
| LISTA_SIFRI_T ID_T '=' izraz  {
    if (poslednja_je_lista) {
        tablica_listi[*$2] = tekuca_lista;
    }
    delete $2;
}
| izraz     {
    delete $1;
}
;

drugi_arg: izraz    {
    $$ = $1;
}
| '?'   {
    $$ = nullptr;
}
;

izraz: INT_T    {
    poslednja_je_lista = false;
    $$ = new Sifra(0.0, $1);
}
| REAL_T    {
    poslednja_je_lista = false;
    $$ = new Sifra($1);
}
| ID_T      {
    auto it_s = tablica_sifri.find(*$1);
    if (it_s != tablica_sifri.end()) {
        poslednja_je_lista = false;
        $$ = new Sifra(it_s->second);
    } else {
        auto it_l = tablica_listi.find(*$1);
        if (it_l != tablica_listi.end()) {
            poslednja_je_lista = true;
            tekuca_lista = it_l->second;
            $$ = new Sifra();
        } else {
            std::cerr << "Greska: nedefinisana promenljiva " << *$1 << std::endl;
            poslednja_je_lista = false;
            $$ = new Sifra();
        }
    }
    delete $1;
}
| izraz '+' izraz   {
    poslednja_je_lista = false;
    $$ = new Sifra(*$1 + *$3);
    delete $1;
    delete $3;
}
| izraz '-' izraz   {
    poslednja_je_lista = false;
    $$ = new Sifra(*$1 - *$3);
    delete $1;
    delete $3;
}
| izraz '*' izraz   {
    poslednja_je_lista = false;
    $$ = new Sifra(*$1 * *$3);
    delete $1;
    delete $3;
}
| izraz '/' izraz   {
    poslednja_je_lista = false;
    $$ = new Sifra(*$1 / *$3);
    delete $1;
    delete $3;
}
| '-' izraz %prec UMINUS    {
    poslednja_je_lista = false;
    $$ = new Sifra(-(*$2));
    delete $2;
}
| izraz '.' FST_T   {
    poslednja_je_lista = false;
    $$ = new Sifra($1->fst());
    delete $1;
}
| izraz '.' SND_T   {
    poslednja_je_lista = false;
    $$ = new Sifra(0.0, $1->snd());
    delete $1;
}
| izraz '.' SUM_T '(' ')'   {
    poslednja_je_lista = false;
    $$ = new Sifra(tekuca_lista.sum());
    delete $1;
}
| izraz '[' izraz ']'   {
    poslednja_je_lista = false;
    int idx = $3->snd();
    $$ = new Sifra(tekuca_lista[idx]);
    delete $1;
    delete $3;
}
| izraz EQ_T izraz      {
    poslednja_je_lista = false;
    bool b = (*$1 == *$3);
    $$ = new Sifra(b ? 1.0 : 0.0, b ? 1 : 0);
    delete $1;
    delete $3;
}
| izraz NEQ_T izraz     {
    poslednja_je_lista = false;
    bool b = (*$1 != *$3);
    $$ = new Sifra(b ? 1.0 : 0.0, b ? 1 : 0);
    delete $1;
    delete $3;
}
| izraz LT_T izraz      {
    poslednja_je_lista = false;
    bool b = (*$1 < *$3);
    $$ = new Sifra(b ? 1.0 : 0.0, b ? 1 : 0);
    delete $1;
    delete $3;
}
| izraz LE_T izraz      {
    poslednja_je_lista = false;
    bool b = (*$1 <= *$3);
    $$ = new Sifra(b ? 1.0 : 0.0, b ? 1 : 0);
    delete $1;
    delete $3;
}
| izraz GT_T izraz      {
    poslednja_je_lista = false;
    bool b = (*$1 > *$3);
    $$ = new Sifra(b ? 1.0 : 0.0, b ? 1 : 0);
    delete $1;
    delete $3;
}
| izraz GE_T izraz      {
    poslednja_je_lista = false;
    bool b = (*$1 >= *$3);
    $$ = new Sifra(b ? 1.0 : 0.0, b ? 1 : 0);
    delete $1;
    delete $3;
}
| '(' izraz ',' drugi_arg ')'   {
    poslednja_je_lista = false;
    if ($4 != nullptr) {
        $$ = new Sifra($2->fst(), $4->snd());
        delete $4;
    } else {
        $$ = new Sifra($2->fst());
    }
    delete $2;
}
| '(' izraz ')'     {
    $$ = $2;
}
| '[' lista_elemenata ']'   {
    poslednja_je_lista = true;
    tekuca_lista = ListaSifri(*$2);
    $$ = new Sifra();
    delete $2;
}
;

lista_elemenata: lista_elemenata ',' izraz      {
    $1->push_back(*$3);
    $$ = $1;
}
| izraz     {
    $$ = new std::vector<Sifra>();
    $$->push_back(*$1);
    delete $1;
}
;

%%

int main() {

    if (yyparse() == 0) {
        std::cout << "Ispravna gramatika" << std::endl;
    } else {
        std::cout << "Neispravna gramatika" << std::endl;
    }

    return 0;
}
