reseni_ispiti_prakticni/jan1_2023/InteraktivniParser/parser.output
Grammar

    0 $accept: program $end

    1 program: program naredba ';'
    2        | naredba ';'

    3 naredba: SIFRA_T ID_T
    4        | SIFRA_T ID_T '(' izraz ',' drugi_arg ')'
    5        | SIFRA_T ID_T '=' izraz
    6        | STAMPAJ_T izraz
    7        | LISTA_SIFRI_T ID_T '=' izraz
    8        | izraz

    9 drugi_arg: izraz
   10          | '?'

   11 izraz: INT_T
   12      | REAL_T
   13      | ID_T
   14      | izraz '+' izraz
   15      | izraz '-' izraz
   16      | izraz '*' izraz
   17      | izraz '/' izraz
   18      | '-' izraz
   19      | izraz '.' FST_T
   20      | izraz '.' SND_T
   21      | izraz '.' SUM_T '(' ')'
   22      | izraz '[' izraz ']'
   23      | izraz EQ_T izraz
   24      | izraz NEQ_T izraz
   25      | izraz LT_T izraz
   26      | izraz LE_T izraz
   27      | izraz GT_T izraz
   28      | izraz GE_T izraz
   29      | '(' izraz ',' drugi_arg ')'
   30      | '(' izraz ')'
   31      | '[' lista_elemenata ']'

   32 lista_elemenata: lista_elemenata ',' izraz
   33                | izraz


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 4 21 29 30
    ')' (41) 4 21 29 30
    '*' (42) 16
    '+' (43) 14
    ',' (44) 4 29 32
    '-' (45) 15 18
    '.' (46) 19 20 21
    '/' (47) 17
    ';' (59) 1 2
    '=' (61) 5 7
    '?' (63) 10
    '[' (91) 22 31
    ']' (93) 22 31
    error (256)
    SIFRA_T (258) 3 4 5
    ID_T <s_val> (259) 3 4 5 7 13
    REAL_T <d_val> (260) 12
    INT_T <i_val> (261) 11
    STAMPAJ_T (262) 6
    FST_T (263) 19
    SND_T (264) 20
    EQ_T (265) 23
    NEQ_T (266) 24
    LT_T (267) 25
    LE_T (268) 26
    GT_T (269) 27
    GE_T (270) 28
    LISTA_SIFRI_T (271) 7
    SUM_T (272) 21
    UMINUS (273)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1 2
        on right: 0 1
    naredba (34)
        on left: 3 4 5 6 7 8
        on right: 1 2
    drugi_arg <sifra_val> (35)
        on left: 9 10
        on right: 4 29
    izraz <sifra_val> (36)
        on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
        on right: 4 5 6 7 8 9 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 32 33
    lista_elemenata <niz_sifri_val> (37)
        on left: 32 33
        on right: 31 32


State 0

    0 $accept: • program $end

    SIFRA_T        shift, and go to state 1
    ID_T           shift, and go to state 2
    REAL_T         shift, and go to state 3
    INT_T          shift, and go to state 4
    STAMPAJ_T      shift, and go to state 5
    LISTA_SIFRI_T  shift, and go to state 6
    '-'            shift, and go to state 7
    '['            shift, and go to state 8
    '('            shift, and go to state 9

    program  go to state 10
    naredba  go to state 11
    izraz    go to state 12


State 1

    3 naredba: SIFRA_T • ID_T
    4        | SIFRA_T • ID_T '(' izraz ',' drugi_arg ')'
    5        | SIFRA_T • ID_T '=' izraz

    ID_T  shift, and go to state 13


State 2

   13 izraz: ID_T •

    $default  reduce using rule 13 (izraz)


State 3

   12 izraz: REAL_T •

    $default  reduce using rule 12 (izraz)


State 4

   11 izraz: INT_T •

    $default  reduce using rule 11 (izraz)


State 5

    6 naredba: STAMPAJ_T • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 14


State 6

    7 naredba: LISTA_SIFRI_T • ID_T '=' izraz

    ID_T  shift, and go to state 15


State 7

   18 izraz: '-' • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 16


State 8

   31 izraz: '[' • lista_elemenata ']'

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz            go to state 17
    lista_elemenata  go to state 18


State 9

   29 izraz: '(' • izraz ',' drugi_arg ')'
   30      | '(' • izraz ')'

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 19


State 10

    0 $accept: program • $end
    1 program: program • naredba ';'

    $end           shift, and go to state 20
    SIFRA_T        shift, and go to state 1
    ID_T           shift, and go to state 2
    REAL_T         shift, and go to state 3
    INT_T          shift, and go to state 4
    STAMPAJ_T      shift, and go to state 5
    LISTA_SIFRI_T  shift, and go to state 6
    '-'            shift, and go to state 7
    '['            shift, and go to state 8
    '('            shift, and go to state 9

    naredba  go to state 21
    izraz    go to state 12


State 11

    2 program: naredba • ';'

    ';'  shift, and go to state 22


State 12

    8 naredba: izraz •
   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz

    EQ_T   shift, and go to state 23
    NEQ_T  shift, and go to state 24
    LT_T   shift, and go to state 25
    LE_T   shift, and go to state 26
    GT_T   shift, and go to state 27
    GE_T   shift, and go to state 28
    '+'    shift, and go to state 29
    '-'    shift, and go to state 30
    '*'    shift, and go to state 31
    '/'    shift, and go to state 32
    '.'    shift, and go to state 33
    '['    shift, and go to state 34

    $default  reduce using rule 8 (naredba)


State 13

    3 naredba: SIFRA_T ID_T •
    4        | SIFRA_T ID_T • '(' izraz ',' drugi_arg ')'
    5        | SIFRA_T ID_T • '=' izraz

    '('  shift, and go to state 35
    '='  shift, and go to state 36

    $default  reduce using rule 3 (naredba)


State 14

    6 naredba: STAMPAJ_T izraz •
   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz

    EQ_T   shift, and go to state 23
    NEQ_T  shift, and go to state 24
    LT_T   shift, and go to state 25
    LE_T   shift, and go to state 26
    GT_T   shift, and go to state 27
    GE_T   shift, and go to state 28
    '+'    shift, and go to state 29
    '-'    shift, and go to state 30
    '*'    shift, and go to state 31
    '/'    shift, and go to state 32
    '.'    shift, and go to state 33
    '['    shift, and go to state 34

    $default  reduce using rule 6 (naredba)


State 15

    7 naredba: LISTA_SIFRI_T ID_T • '=' izraz

    '='  shift, and go to state 37


State 16

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   18      | '-' izraz •
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz

    '.'  shift, and go to state 33
    '['  shift, and go to state 34

    $default  reduce using rule 18 (izraz)


State 17

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz
   33 lista_elemenata: izraz •

    EQ_T   shift, and go to state 23
    NEQ_T  shift, and go to state 24
    LT_T   shift, and go to state 25
    LE_T   shift, and go to state 26
    GT_T   shift, and go to state 27
    GE_T   shift, and go to state 28
    '+'    shift, and go to state 29
    '-'    shift, and go to state 30
    '*'    shift, and go to state 31
    '/'    shift, and go to state 32
    '.'    shift, and go to state 33
    '['    shift, and go to state 34

    $default  reduce using rule 33 (lista_elemenata)


State 18

   31 izraz: '[' lista_elemenata • ']'
   32 lista_elemenata: lista_elemenata • ',' izraz

    ','  shift, and go to state 38
    ']'  shift, and go to state 39


State 19

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz
   29      | '(' izraz • ',' drugi_arg ')'
   30      | '(' izraz • ')'

    EQ_T   shift, and go to state 23
    NEQ_T  shift, and go to state 24
    LT_T   shift, and go to state 25
    LE_T   shift, and go to state 26
    GT_T   shift, and go to state 27
    GE_T   shift, and go to state 28
    '+'    shift, and go to state 29
    '-'    shift, and go to state 30
    '*'    shift, and go to state 31
    '/'    shift, and go to state 32
    '.'    shift, and go to state 33
    '['    shift, and go to state 34
    ','    shift, and go to state 40
    ')'    shift, and go to state 41


State 20

    0 $accept: program $end •

    $default  accept


State 21

    1 program: program naredba • ';'

    ';'  shift, and go to state 42


State 22

    2 program: naredba ';' •

    $default  reduce using rule 2 (program)


State 23

   23 izraz: izraz EQ_T • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 43


State 24

   24 izraz: izraz NEQ_T • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 44


State 25

   25 izraz: izraz LT_T • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 45


State 26

   26 izraz: izraz LE_T • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 46


State 27

   27 izraz: izraz GT_T • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 47


State 28

   28 izraz: izraz GE_T • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 48


State 29

   14 izraz: izraz '+' • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 49


State 30

   15 izraz: izraz '-' • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 50


State 31

   16 izraz: izraz '*' • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 51


State 32

   17 izraz: izraz '/' • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 52


State 33

   19 izraz: izraz '.' • FST_T
   20      | izraz '.' • SND_T
   21      | izraz '.' • SUM_T '(' ')'

    FST_T  shift, and go to state 53
    SND_T  shift, and go to state 54
    SUM_T  shift, and go to state 55


State 34

   22 izraz: izraz '[' • izraz ']'

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 56


State 35

    4 naredba: SIFRA_T ID_T '(' • izraz ',' drugi_arg ')'

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 57


State 36

    5 naredba: SIFRA_T ID_T '=' • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 58


State 37

    7 naredba: LISTA_SIFRI_T ID_T '=' • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 59


State 38

   32 lista_elemenata: lista_elemenata ',' • izraz

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9

    izraz  go to state 60


State 39

   31 izraz: '[' lista_elemenata ']' •

    $default  reduce using rule 31 (izraz)


State 40

   29 izraz: '(' izraz ',' • drugi_arg ')'

    ID_T    shift, and go to state 2
    REAL_T  shift, and go to state 3
    INT_T   shift, and go to state 4
    '-'     shift, and go to state 7
    '['     shift, and go to state 8
    '('     shift, and go to state 9
    '?'     shift, and go to state 61

    drugi_arg  go to state 62
    izraz      go to state 63


State 41

   30 izraz: '(' izraz ')' •

    $default  reduce using rule 30 (izraz)


State 42

    1 program: program naredba ';' •

    $default  reduce using rule 1 (program)


State 43

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   23      | izraz EQ_T izraz •
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '.'  shift, and go to state 33
    '['  shift, and go to state 34

    $default  reduce using rule 23 (izraz)


State 44

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   24      | izraz NEQ_T izraz •
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '.'  shift, and go to state 33
    '['  shift, and go to state 34

    $default  reduce using rule 24 (izraz)


State 45

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   25      | izraz LT_T izraz •
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '.'  shift, and go to state 33
    '['  shift, and go to state 34

    $default  reduce using rule 25 (izraz)


State 46

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   26      | izraz LE_T izraz •
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '.'  shift, and go to state 33
    '['  shift, and go to state 34

    $default  reduce using rule 26 (izraz)


State 47

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   27      | izraz GT_T izraz •
   28      | izraz • GE_T izraz

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '.'  shift, and go to state 33
    '['  shift, and go to state 34

    $default  reduce using rule 27 (izraz)


State 48

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz
   28      | izraz GE_T izraz •

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '.'  shift, and go to state 33
    '['  shift, and go to state 34

    $default  reduce using rule 28 (izraz)


State 49

   14 izraz: izraz • '+' izraz
   14      | izraz '+' izraz •
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '.'  shift, and go to state 33
    '['  shift, and go to state 34

    $default  reduce using rule 14 (izraz)


State 50

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   15      | izraz '-' izraz •
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '.'  shift, and go to state 33
    '['  shift, and go to state 34

    $default  reduce using rule 15 (izraz)


State 51

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   16      | izraz '*' izraz •
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz

    '.'  shift, and go to state 33
    '['  shift, and go to state 34

    $default  reduce using rule 16 (izraz)


State 52

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   17      | izraz '/' izraz •
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz

    '.'  shift, and go to state 33
    '['  shift, and go to state 34

    $default  reduce using rule 17 (izraz)


State 53

   19 izraz: izraz '.' FST_T •

    $default  reduce using rule 19 (izraz)


State 54

   20 izraz: izraz '.' SND_T •

    $default  reduce using rule 20 (izraz)


State 55

   21 izraz: izraz '.' SUM_T • '(' ')'

    '('  shift, and go to state 64


State 56

   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   22      | izraz '[' izraz • ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz

    EQ_T   shift, and go to state 23
    NEQ_T  shift, and go to state 24
    LT_T   shift, and go to state 25
    LE_T   shift, and go to state 26
    GT_T   shift, and go to state 27
    GE_T   shift, and go to state 28
    '+'    shift, and go to state 29
    '-'    shift, and go to state 30
    '*'    shift, and go to state 31
    '/'    shift, and go to state 32
    '.'    shift, and go to state 33
    '['    shift, and go to state 34
    ']'    shift, and go to state 65


State 57

    4 naredba: SIFRA_T ID_T '(' izraz • ',' drugi_arg ')'
   14 izraz: izraz • '+' izraz
   15      | izraz • '-' izraz
   16      | izraz • '*' izraz
   17      | izraz • '/' izraz
   19      | izraz • '.' FST_T
   20      | izraz • '.' SND_T
   21      | izraz • '.' SUM_T '(' ')'
   22      | izraz • '[' izraz ']'
   23      | izraz • EQ_T izraz
   24      | izraz • NEQ_T izraz
   25      | izraz • LT_T izraz
   26      | izraz • LE_T izraz
   27      | izraz • GT_T izraz
   28      | izraz • GE_T izraz
